// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CronEditor is rendered with a DAY frequency 1`] = `
Array [
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Frequency
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            Every
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencySelect"
            id="generated-id"
          >
            <option
              value="MINUTE"
            >
              minute
            </option>
            <option
              value="HOUR"
            >
              hour
            </option>
            <option
              value="DAY"
            >
              day
            </option>
            <option
              value="WEEK"
            >
              week
            </option>
            <option
              value="MONTH"
            >
              month
            </option>
            <option
              value="YEAR"
            >
              year
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    data-test-subj="cronFrequencyConfiguration"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Time
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
        id="generated-id"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
          >
            <div
              class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
            >
              <label
                class="euiFormLabel emotion-euiFormLabel"
              >
                At
              </label>
            </div>
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
              style="--euiFormControlRightIconsCount: 1;"
            >
              <select
                aria-label="Hour"
                class="euiSelect emotion-euiSelect-fullWidth-inGroup"
                data-test-subj="cronFrequencyDailyHourSelect"
              >
                <option
                  value="0"
                >
                  00
                </option>
                <option
                  value="1"
                >
                  01
                </option>
                <option
                  value="2"
                >
                  02
                </option>
                <option
                  value="3"
                >
                  03
                </option>
                <option
                  value="4"
                >
                  04
                </option>
                <option
                  value="5"
                >
                  05
                </option>
                <option
                  value="6"
                >
                  06
                </option>
                <option
                  value="7"
                >
                  07
                </option>
                <option
                  value="8"
                >
                  08
                </option>
                <option
                  value="9"
                >
                  09
                </option>
                <option
                  value="10"
                >
                  10
                </option>
                <option
                  value="11"
                >
                  11
                </option>
                <option
                  value="12"
                >
                  12
                </option>
                <option
                  value="13"
                >
                  13
                </option>
                <option
                  value="14"
                >
                  14
                </option>
                <option
                  value="15"
                >
                  15
                </option>
                <option
                  value="16"
                >
                  16
                </option>
                <option
                  value="17"
                >
                  17
                </option>
                <option
                  value="18"
                >
                  18
                </option>
                <option
                  value="19"
                >
                  19
                </option>
                <option
                  value="20"
                >
                  20
                </option>
                <option
                  value="21"
                >
                  21
                </option>
                <option
                  value="22"
                >
                  22
                </option>
                <option
                  value="23"
                >
                  23
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
          >
            <div
              class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
            >
              <label
                class="euiFormLabel emotion-euiFormLabel"
              >
                :
              </label>
            </div>
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
              style="--euiFormControlRightIconsCount: 1;"
            >
              <select
                aria-label="Minute"
                class="euiSelect emotion-euiSelect-fullWidth-inGroup"
                data-test-subj="cronFrequencyDailyMinuteSelect"
              >
                <option
                  value="0"
                >
                  00
                </option>
                <option
                  value="1"
                >
                  01
                </option>
                <option
                  value="2"
                >
                  02
                </option>
                <option
                  value="3"
                >
                  03
                </option>
                <option
                  value="4"
                >
                  04
                </option>
                <option
                  value="5"
                >
                  05
                </option>
                <option
                  value="6"
                >
                  06
                </option>
                <option
                  value="7"
                >
                  07
                </option>
                <option
                  value="8"
                >
                  08
                </option>
                <option
                  value="9"
                >
                  09
                </option>
                <option
                  value="10"
                >
                  10
                </option>
                <option
                  value="11"
                >
                  11
                </option>
                <option
                  value="12"
                >
                  12
                </option>
                <option
                  value="13"
                >
                  13
                </option>
                <option
                  value="14"
                >
                  14
                </option>
                <option
                  value="15"
                >
                  15
                </option>
                <option
                  value="16"
                >
                  16
                </option>
                <option
                  value="17"
                >
                  17
                </option>
                <option
                  value="18"
                >
                  18
                </option>
                <option
                  value="19"
                >
                  19
                </option>
                <option
                  value="20"
                >
                  20
                </option>
                <option
                  value="21"
                >
                  21
                </option>
                <option
                  value="22"
                >
                  22
                </option>
                <option
                  value="23"
                >
                  23
                </option>
                <option
                  value="24"
                >
                  24
                </option>
                <option
                  value="25"
                >
                  25
                </option>
                <option
                  value="26"
                >
                  26
                </option>
                <option
                  value="27"
                >
                  27
                </option>
                <option
                  value="28"
                >
                  28
                </option>
                <option
                  value="29"
                >
                  29
                </option>
                <option
                  value="30"
                >
                  30
                </option>
                <option
                  value="31"
                >
                  31
                </option>
                <option
                  value="32"
                >
                  32
                </option>
                <option
                  value="33"
                >
                  33
                </option>
                <option
                  value="34"
                >
                  34
                </option>
                <option
                  value="35"
                >
                  35
                </option>
                <option
                  value="36"
                >
                  36
                </option>
                <option
                  value="37"
                >
                  37
                </option>
                <option
                  value="38"
                >
                  38
                </option>
                <option
                  value="39"
                >
                  39
                </option>
                <option
                  value="40"
                >
                  40
                </option>
                <option
                  value="41"
                >
                  41
                </option>
                <option
                  value="42"
                >
                  42
                </option>
                <option
                  value="43"
                >
                  43
                </option>
                <option
                  value="44"
                >
                  44
                </option>
                <option
                  value="45"
                >
                  45
                </option>
                <option
                  value="46"
                >
                  46
                </option>
                <option
                  value="47"
                >
                  47
                </option>
                <option
                  value="48"
                >
                  48
                </option>
                <option
                  value="49"
                >
                  49
                </option>
                <option
                  value="50"
                >
                  50
                </option>
                <option
                  value="51"
                >
                  51
                </option>
                <option
                  value="52"
                >
                  52
                </option>
                <option
                  value="53"
                >
                  53
                </option>
                <option
                  value="54"
                >
                  54
                </option>
                <option
                  value="55"
                >
                  55
                </option>
                <option
                  value="56"
                >
                  56
                </option>
                <option
                  value="57"
                >
                  57
                </option>
                <option
                  value="58"
                >
                  58
                </option>
                <option
                  value="59"
                >
                  59
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CronEditor is rendered with a HOUR frequency 1`] = `
Array [
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Frequency
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            Every
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencySelect"
            id="generated-id"
          >
            <option
              value="MINUTE"
            >
              minute
            </option>
            <option
              value="HOUR"
            >
              hour
            </option>
            <option
              value="DAY"
            >
              day
            </option>
            <option
              value="WEEK"
            >
              week
            </option>
            <option
              value="MONTH"
            >
              month
            </option>
            <option
              value="YEAR"
            >
              year
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    data-test-subj="cronFrequencyConfiguration"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Minute
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            At
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencyHourlyMinuteSelect"
            id="generated-id"
          >
            <option
              value="0"
            >
              00
            </option>
            <option
              value="1"
            >
              01
            </option>
            <option
              value="2"
            >
              02
            </option>
            <option
              value="3"
            >
              03
            </option>
            <option
              value="4"
            >
              04
            </option>
            <option
              value="5"
            >
              05
            </option>
            <option
              value="6"
            >
              06
            </option>
            <option
              value="7"
            >
              07
            </option>
            <option
              value="8"
            >
              08
            </option>
            <option
              value="9"
            >
              09
            </option>
            <option
              value="10"
            >
              10
            </option>
            <option
              value="11"
            >
              11
            </option>
            <option
              value="12"
            >
              12
            </option>
            <option
              value="13"
            >
              13
            </option>
            <option
              value="14"
            >
              14
            </option>
            <option
              value="15"
            >
              15
            </option>
            <option
              value="16"
            >
              16
            </option>
            <option
              value="17"
            >
              17
            </option>
            <option
              value="18"
            >
              18
            </option>
            <option
              value="19"
            >
              19
            </option>
            <option
              value="20"
            >
              20
            </option>
            <option
              value="21"
            >
              21
            </option>
            <option
              value="22"
            >
              22
            </option>
            <option
              value="23"
            >
              23
            </option>
            <option
              value="24"
            >
              24
            </option>
            <option
              value="25"
            >
              25
            </option>
            <option
              value="26"
            >
              26
            </option>
            <option
              value="27"
            >
              27
            </option>
            <option
              value="28"
            >
              28
            </option>
            <option
              value="29"
            >
              29
            </option>
            <option
              value="30"
            >
              30
            </option>
            <option
              value="31"
            >
              31
            </option>
            <option
              value="32"
            >
              32
            </option>
            <option
              value="33"
            >
              33
            </option>
            <option
              value="34"
            >
              34
            </option>
            <option
              value="35"
            >
              35
            </option>
            <option
              value="36"
            >
              36
            </option>
            <option
              value="37"
            >
              37
            </option>
            <option
              value="38"
            >
              38
            </option>
            <option
              value="39"
            >
              39
            </option>
            <option
              value="40"
            >
              40
            </option>
            <option
              value="41"
            >
              41
            </option>
            <option
              value="42"
            >
              42
            </option>
            <option
              value="43"
            >
              43
            </option>
            <option
              value="44"
            >
              44
            </option>
            <option
              value="45"
            >
              45
            </option>
            <option
              value="46"
            >
              46
            </option>
            <option
              value="47"
            >
              47
            </option>
            <option
              value="48"
            >
              48
            </option>
            <option
              value="49"
            >
              49
            </option>
            <option
              value="50"
            >
              50
            </option>
            <option
              value="51"
            >
              51
            </option>
            <option
              value="52"
            >
              52
            </option>
            <option
              value="53"
            >
              53
            </option>
            <option
              value="54"
            >
              54
            </option>
            <option
              value="55"
            >
              55
            </option>
            <option
              value="56"
            >
              56
            </option>
            <option
              value="57"
            >
              57
            </option>
            <option
              value="58"
            >
              58
            </option>
            <option
              value="59"
            >
              59
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CronEditor is rendered with a MINUTE frequency 1`] = `
Array [
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Frequency
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            Every
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencySelect"
            id="generated-id"
          >
            <option
              value="MINUTE"
            >
              minute
            </option>
            <option
              value="HOUR"
            >
              hour
            </option>
            <option
              value="DAY"
            >
              day
            </option>
            <option
              value="WEEK"
            >
              week
            </option>
            <option
              value="MONTH"
            >
              month
            </option>
            <option
              value="YEAR"
            >
              year
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    data-test-subj="cronFrequencyConfiguration"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Minute
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            Every
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencyMinutelyMinuteSelect"
            id="generated-id"
          >
            <option
              value="0,5,10,15,20,25,30,35,40,45,50,55"
            >
              5
            </option>
            <option
              value="0,10,20,30,40,50"
            >
              10
            </option>
            <option
              value="0,15,30,45"
            >
              15
            </option>
            <option
              value="0,30"
            >
              30
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
        <div
          class="euiFormControlLayout__append emotion-euiFormControlLayout__side-append"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            minutes
          </label>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CronEditor is rendered with a MONTH frequency 1`] = `
Array [
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Frequency
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            Every
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencySelect"
            id="generated-id"
          >
            <option
              value="MINUTE"
            >
              minute
            </option>
            <option
              value="HOUR"
            >
              hour
            </option>
            <option
              value="DAY"
            >
              day
            </option>
            <option
              value="WEEK"
            >
              week
            </option>
            <option
              value="MONTH"
            >
              month
            </option>
            <option
              value="YEAR"
            >
              year
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    data-test-subj="cronFrequencyConfiguration"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Date
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            On the
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencyMonthlyDateSelect"
            id="generated-id"
          >
            <option
              value="1"
            >
              1st
            </option>
            <option
              value="2"
            >
              2nd
            </option>
            <option
              value="3"
            >
              3rd
            </option>
            <option
              value="4"
            >
              4th
            </option>
            <option
              value="5"
            >
              5th
            </option>
            <option
              value="6"
            >
              6th
            </option>
            <option
              value="7"
            >
              7th
            </option>
            <option
              value="8"
            >
              8th
            </option>
            <option
              value="9"
            >
              9th
            </option>
            <option
              value="10"
            >
              10th
            </option>
            <option
              value="11"
            >
              11st
            </option>
            <option
              value="12"
            >
              12nd
            </option>
            <option
              value="13"
            >
              13rd
            </option>
            <option
              value="14"
            >
              14th
            </option>
            <option
              value="15"
            >
              15th
            </option>
            <option
              value="16"
            >
              16th
            </option>
            <option
              value="17"
            >
              17th
            </option>
            <option
              value="18"
            >
              18th
            </option>
            <option
              value="19"
            >
              19th
            </option>
            <option
              value="20"
            >
              20th
            </option>
            <option
              value="21"
            >
              21st
            </option>
            <option
              value="22"
            >
              22nd
            </option>
            <option
              value="23"
            >
              23rd
            </option>
            <option
              value="24"
            >
              24th
            </option>
            <option
              value="25"
            >
              25th
            </option>
            <option
              value="26"
            >
              26th
            </option>
            <option
              value="27"
            >
              27th
            </option>
            <option
              value="28"
            >
              28th
            </option>
            <option
              value="29"
            >
              29th
            </option>
            <option
              value="30"
            >
              30th
            </option>
            <option
              value="31"
            >
              31st
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    data-test-subj="cronFrequencyConfiguration"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Time
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
        id="generated-id"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
          >
            <div
              class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
            >
              <label
                class="euiFormLabel emotion-euiFormLabel"
              >
                At
              </label>
            </div>
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
              style="--euiFormControlRightIconsCount: 1;"
            >
              <select
                aria-label="Hour"
                class="euiSelect emotion-euiSelect-fullWidth-inGroup"
                data-test-subj="cronFrequencyMonthlyHourSelect"
              >
                <option
                  value="0"
                >
                  00
                </option>
                <option
                  value="1"
                >
                  01
                </option>
                <option
                  value="2"
                >
                  02
                </option>
                <option
                  value="3"
                >
                  03
                </option>
                <option
                  value="4"
                >
                  04
                </option>
                <option
                  value="5"
                >
                  05
                </option>
                <option
                  value="6"
                >
                  06
                </option>
                <option
                  value="7"
                >
                  07
                </option>
                <option
                  value="8"
                >
                  08
                </option>
                <option
                  value="9"
                >
                  09
                </option>
                <option
                  value="10"
                >
                  10
                </option>
                <option
                  value="11"
                >
                  11
                </option>
                <option
                  value="12"
                >
                  12
                </option>
                <option
                  value="13"
                >
                  13
                </option>
                <option
                  value="14"
                >
                  14
                </option>
                <option
                  value="15"
                >
                  15
                </option>
                <option
                  value="16"
                >
                  16
                </option>
                <option
                  value="17"
                >
                  17
                </option>
                <option
                  value="18"
                >
                  18
                </option>
                <option
                  value="19"
                >
                  19
                </option>
                <option
                  value="20"
                >
                  20
                </option>
                <option
                  value="21"
                >
                  21
                </option>
                <option
                  value="22"
                >
                  22
                </option>
                <option
                  value="23"
                >
                  23
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
          >
            <div
              class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
            >
              <label
                class="euiFormLabel emotion-euiFormLabel"
              >
                :
              </label>
            </div>
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
              style="--euiFormControlRightIconsCount: 1;"
            >
              <select
                aria-label="Minute"
                class="euiSelect emotion-euiSelect-fullWidth-inGroup"
                data-test-subj="cronFrequencyMonthlyMinuteSelect"
              >
                <option
                  value="0"
                >
                  00
                </option>
                <option
                  value="1"
                >
                  01
                </option>
                <option
                  value="2"
                >
                  02
                </option>
                <option
                  value="3"
                >
                  03
                </option>
                <option
                  value="4"
                >
                  04
                </option>
                <option
                  value="5"
                >
                  05
                </option>
                <option
                  value="6"
                >
                  06
                </option>
                <option
                  value="7"
                >
                  07
                </option>
                <option
                  value="8"
                >
                  08
                </option>
                <option
                  value="9"
                >
                  09
                </option>
                <option
                  value="10"
                >
                  10
                </option>
                <option
                  value="11"
                >
                  11
                </option>
                <option
                  value="12"
                >
                  12
                </option>
                <option
                  value="13"
                >
                  13
                </option>
                <option
                  value="14"
                >
                  14
                </option>
                <option
                  value="15"
                >
                  15
                </option>
                <option
                  value="16"
                >
                  16
                </option>
                <option
                  value="17"
                >
                  17
                </option>
                <option
                  value="18"
                >
                  18
                </option>
                <option
                  value="19"
                >
                  19
                </option>
                <option
                  value="20"
                >
                  20
                </option>
                <option
                  value="21"
                >
                  21
                </option>
                <option
                  value="22"
                >
                  22
                </option>
                <option
                  value="23"
                >
                  23
                </option>
                <option
                  value="24"
                >
                  24
                </option>
                <option
                  value="25"
                >
                  25
                </option>
                <option
                  value="26"
                >
                  26
                </option>
                <option
                  value="27"
                >
                  27
                </option>
                <option
                  value="28"
                >
                  28
                </option>
                <option
                  value="29"
                >
                  29
                </option>
                <option
                  value="30"
                >
                  30
                </option>
                <option
                  value="31"
                >
                  31
                </option>
                <option
                  value="32"
                >
                  32
                </option>
                <option
                  value="33"
                >
                  33
                </option>
                <option
                  value="34"
                >
                  34
                </option>
                <option
                  value="35"
                >
                  35
                </option>
                <option
                  value="36"
                >
                  36
                </option>
                <option
                  value="37"
                >
                  37
                </option>
                <option
                  value="38"
                >
                  38
                </option>
                <option
                  value="39"
                >
                  39
                </option>
                <option
                  value="40"
                >
                  40
                </option>
                <option
                  value="41"
                >
                  41
                </option>
                <option
                  value="42"
                >
                  42
                </option>
                <option
                  value="43"
                >
                  43
                </option>
                <option
                  value="44"
                >
                  44
                </option>
                <option
                  value="45"
                >
                  45
                </option>
                <option
                  value="46"
                >
                  46
                </option>
                <option
                  value="47"
                >
                  47
                </option>
                <option
                  value="48"
                >
                  48
                </option>
                <option
                  value="49"
                >
                  49
                </option>
                <option
                  value="50"
                >
                  50
                </option>
                <option
                  value="51"
                >
                  51
                </option>
                <option
                  value="52"
                >
                  52
                </option>
                <option
                  value="53"
                >
                  53
                </option>
                <option
                  value="54"
                >
                  54
                </option>
                <option
                  value="55"
                >
                  55
                </option>
                <option
                  value="56"
                >
                  56
                </option>
                <option
                  value="57"
                >
                  57
                </option>
                <option
                  value="58"
                >
                  58
                </option>
                <option
                  value="59"
                >
                  59
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CronEditor is rendered with a WEEK frequency 1`] = `
Array [
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Frequency
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            Every
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencySelect"
            id="generated-id"
          >
            <option
              value="MINUTE"
            >
              minute
            </option>
            <option
              value="HOUR"
            >
              hour
            </option>
            <option
              value="DAY"
            >
              day
            </option>
            <option
              value="WEEK"
            >
              week
            </option>
            <option
              value="MONTH"
            >
              month
            </option>
            <option
              value="YEAR"
            >
              year
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    data-test-subj="cronFrequencyConfiguration"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Day
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            On
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencyWeeklyDaySelect"
            id="generated-id"
          >
            <option
              value="1"
            >
              Sunday
            </option>
            <option
              value="2"
            >
              Monday
            </option>
            <option
              value="3"
            >
              Tuesday
            </option>
            <option
              value="4"
            >
              Wednesday
            </option>
            <option
              value="5"
            >
              Thursday
            </option>
            <option
              value="6"
            >
              Friday
            </option>
            <option
              value="7"
            >
              Saturday
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    data-test-subj="cronFrequencyConfiguration"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Time
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
        id="generated-id"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
          >
            <div
              class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
            >
              <label
                class="euiFormLabel emotion-euiFormLabel"
              >
                At
              </label>
            </div>
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
              style="--euiFormControlRightIconsCount: 1;"
            >
              <select
                aria-label="Hour"
                class="euiSelect emotion-euiSelect-fullWidth-inGroup"
                data-test-subj="cronFrequencyWeeklyHourSelect"
              >
                <option
                  value="0"
                >
                  00
                </option>
                <option
                  value="1"
                >
                  01
                </option>
                <option
                  value="2"
                >
                  02
                </option>
                <option
                  value="3"
                >
                  03
                </option>
                <option
                  value="4"
                >
                  04
                </option>
                <option
                  value="5"
                >
                  05
                </option>
                <option
                  value="6"
                >
                  06
                </option>
                <option
                  value="7"
                >
                  07
                </option>
                <option
                  value="8"
                >
                  08
                </option>
                <option
                  value="9"
                >
                  09
                </option>
                <option
                  value="10"
                >
                  10
                </option>
                <option
                  value="11"
                >
                  11
                </option>
                <option
                  value="12"
                >
                  12
                </option>
                <option
                  value="13"
                >
                  13
                </option>
                <option
                  value="14"
                >
                  14
                </option>
                <option
                  value="15"
                >
                  15
                </option>
                <option
                  value="16"
                >
                  16
                </option>
                <option
                  value="17"
                >
                  17
                </option>
                <option
                  value="18"
                >
                  18
                </option>
                <option
                  value="19"
                >
                  19
                </option>
                <option
                  value="20"
                >
                  20
                </option>
                <option
                  value="21"
                >
                  21
                </option>
                <option
                  value="22"
                >
                  22
                </option>
                <option
                  value="23"
                >
                  23
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
          >
            <div
              class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
            >
              <label
                class="euiFormLabel emotion-euiFormLabel"
              >
                :
              </label>
            </div>
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
              style="--euiFormControlRightIconsCount: 1;"
            >
              <select
                aria-label="Minute"
                class="euiSelect emotion-euiSelect-fullWidth-inGroup"
                data-test-subj="cronFrequencyWeeklyMinuteSelect"
              >
                <option
                  value="0"
                >
                  00
                </option>
                <option
                  value="1"
                >
                  01
                </option>
                <option
                  value="2"
                >
                  02
                </option>
                <option
                  value="3"
                >
                  03
                </option>
                <option
                  value="4"
                >
                  04
                </option>
                <option
                  value="5"
                >
                  05
                </option>
                <option
                  value="6"
                >
                  06
                </option>
                <option
                  value="7"
                >
                  07
                </option>
                <option
                  value="8"
                >
                  08
                </option>
                <option
                  value="9"
                >
                  09
                </option>
                <option
                  value="10"
                >
                  10
                </option>
                <option
                  value="11"
                >
                  11
                </option>
                <option
                  value="12"
                >
                  12
                </option>
                <option
                  value="13"
                >
                  13
                </option>
                <option
                  value="14"
                >
                  14
                </option>
                <option
                  value="15"
                >
                  15
                </option>
                <option
                  value="16"
                >
                  16
                </option>
                <option
                  value="17"
                >
                  17
                </option>
                <option
                  value="18"
                >
                  18
                </option>
                <option
                  value="19"
                >
                  19
                </option>
                <option
                  value="20"
                >
                  20
                </option>
                <option
                  value="21"
                >
                  21
                </option>
                <option
                  value="22"
                >
                  22
                </option>
                <option
                  value="23"
                >
                  23
                </option>
                <option
                  value="24"
                >
                  24
                </option>
                <option
                  value="25"
                >
                  25
                </option>
                <option
                  value="26"
                >
                  26
                </option>
                <option
                  value="27"
                >
                  27
                </option>
                <option
                  value="28"
                >
                  28
                </option>
                <option
                  value="29"
                >
                  29
                </option>
                <option
                  value="30"
                >
                  30
                </option>
                <option
                  value="31"
                >
                  31
                </option>
                <option
                  value="32"
                >
                  32
                </option>
                <option
                  value="33"
                >
                  33
                </option>
                <option
                  value="34"
                >
                  34
                </option>
                <option
                  value="35"
                >
                  35
                </option>
                <option
                  value="36"
                >
                  36
                </option>
                <option
                  value="37"
                >
                  37
                </option>
                <option
                  value="38"
                >
                  38
                </option>
                <option
                  value="39"
                >
                  39
                </option>
                <option
                  value="40"
                >
                  40
                </option>
                <option
                  value="41"
                >
                  41
                </option>
                <option
                  value="42"
                >
                  42
                </option>
                <option
                  value="43"
                >
                  43
                </option>
                <option
                  value="44"
                >
                  44
                </option>
                <option
                  value="45"
                >
                  45
                </option>
                <option
                  value="46"
                >
                  46
                </option>
                <option
                  value="47"
                >
                  47
                </option>
                <option
                  value="48"
                >
                  48
                </option>
                <option
                  value="49"
                >
                  49
                </option>
                <option
                  value="50"
                >
                  50
                </option>
                <option
                  value="51"
                >
                  51
                </option>
                <option
                  value="52"
                >
                  52
                </option>
                <option
                  value="53"
                >
                  53
                </option>
                <option
                  value="54"
                >
                  54
                </option>
                <option
                  value="55"
                >
                  55
                </option>
                <option
                  value="56"
                >
                  56
                </option>
                <option
                  value="57"
                >
                  57
                </option>
                <option
                  value="58"
                >
                  58
                </option>
                <option
                  value="59"
                >
                  59
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CronEditor is rendered with a YEAR frequency 1`] = `
Array [
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Frequency
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            Every
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencySelect"
            id="generated-id"
          >
            <option
              value="MINUTE"
            >
              minute
            </option>
            <option
              value="HOUR"
            >
              hour
            </option>
            <option
              value="DAY"
            >
              day
            </option>
            <option
              value="WEEK"
            >
              week
            </option>
            <option
              value="MONTH"
            >
              month
            </option>
            <option
              value="YEAR"
            >
              year
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    data-test-subj="cronFrequencyConfiguration"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Month
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            In
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencyYearlyMonthSelect"
            id="generated-id"
          >
            <option
              value="1"
            >
              January
            </option>
            <option
              value="2"
            >
              February
            </option>
            <option
              value="3"
            >
              March
            </option>
            <option
              value="4"
            >
              April
            </option>
            <option
              value="5"
            >
              May
            </option>
            <option
              value="6"
            >
              June
            </option>
            <option
              value="7"
            >
              July
            </option>
            <option
              value="8"
            >
              August
            </option>
            <option
              value="9"
            >
              September
            </option>
            <option
              value="10"
            >
              October
            </option>
            <option
              value="11"
            >
              November
            </option>
            <option
              value="12"
            >
              December
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    data-test-subj="cronFrequencyConfiguration"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Date
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
      >
        <div
          class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
        >
          <label
            class="euiFormLabel emotion-euiFormLabel"
            for="generated-id"
          >
            On the
          </label>
        </div>
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <select
            class="euiSelect emotion-euiSelect-fullWidth-inGroup"
            data-test-subj="cronFrequencyYearlyDateSelect"
            id="generated-id"
          >
            <option
              value="1"
            >
              1st
            </option>
            <option
              value="2"
            >
              2nd
            </option>
            <option
              value="3"
            >
              3rd
            </option>
            <option
              value="4"
            >
              4th
            </option>
            <option
              value="5"
            >
              5th
            </option>
            <option
              value="6"
            >
              6th
            </option>
            <option
              value="7"
            >
              7th
            </option>
            <option
              value="8"
            >
              8th
            </option>
            <option
              value="9"
            >
              9th
            </option>
            <option
              value="10"
            >
              10th
            </option>
            <option
              value="11"
            >
              11st
            </option>
            <option
              value="12"
            >
              12nd
            </option>
            <option
              value="13"
            >
              13rd
            </option>
            <option
              value="14"
            >
              14th
            </option>
            <option
              value="15"
            >
              15th
            </option>
            <option
              value="16"
            >
              16th
            </option>
            <option
              value="17"
            >
              17th
            </option>
            <option
              value="18"
            >
              18th
            </option>
            <option
              value="19"
            >
              19th
            </option>
            <option
              value="20"
            >
              20th
            </option>
            <option
              value="21"
            >
              21st
            </option>
            <option
              value="22"
            >
              22nd
            </option>
            <option
              value="23"
            >
              23rd
            </option>
            <option
              value="24"
            >
              24th
            </option>
            <option
              value="25"
            >
              25th
            </option>
            <option
              value="26"
            >
              26th
            </option>
            <option
              value="27"
            >
              27th
            </option>
            <option
              value="28"
            >
              28th
            </option>
            <option
              value="29"
            >
              29th
            </option>
            <option
              value="30"
            >
              30th
            </option>
            <option
              value="31"
            >
              31st
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="arrowDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow-fullWidth"
    data-test-subj="cronFrequencyConfiguration"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Time
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-xs-flexStart-stretch-row"
        id="generated-id"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
          >
            <div
              class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
            >
              <label
                class="euiFormLabel emotion-euiFormLabel"
              >
                At
              </label>
            </div>
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
              style="--euiFormControlRightIconsCount: 1;"
            >
              <select
                aria-label="Hour"
                class="euiSelect emotion-euiSelect-fullWidth-inGroup"
                data-test-subj="cronFrequencyYearlyHourSelect"
              >
                <option
                  value="0"
                >
                  00
                </option>
                <option
                  value="1"
                >
                  01
                </option>
                <option
                  value="2"
                >
                  02
                </option>
                <option
                  value="3"
                >
                  03
                </option>
                <option
                  value="4"
                >
                  04
                </option>
                <option
                  value="5"
                >
                  05
                </option>
                <option
                  value="6"
                >
                  06
                </option>
                <option
                  value="7"
                >
                  07
                </option>
                <option
                  value="8"
                >
                  08
                </option>
                <option
                  value="9"
                >
                  09
                </option>
                <option
                  value="10"
                >
                  10
                </option>
                <option
                  value="11"
                >
                  11
                </option>
                <option
                  value="12"
                >
                  12
                </option>
                <option
                  value="13"
                >
                  13
                </option>
                <option
                  value="14"
                >
                  14
                </option>
                <option
                  value="15"
                >
                  15
                </option>
                <option
                  value="16"
                >
                  16
                </option>
                <option
                  value="17"
                >
                  17
                </option>
                <option
                  value="18"
                >
                  18
                </option>
                <option
                  value="19"
                >
                  19
                </option>
                <option
                  value="20"
                >
                  20
                </option>
                <option
                  value="21"
                >
                  21
                </option>
                <option
                  value="22"
                >
                  22
                </option>
                <option
                  value="23"
                >
                  23
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-fullWidth-group"
          >
            <div
              class="euiFormControlLayout__prepend emotion-euiFormControlLayout__side-prepend"
            >
              <label
                class="euiFormLabel emotion-euiFormLabel"
              >
                :
              </label>
            </div>
            <div
              class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly"
              style="--euiFormControlRightIconsCount: 1;"
            >
              <select
                aria-label="Minute"
                class="euiSelect emotion-euiSelect-fullWidth-inGroup"
                data-test-subj="cronFrequencyYearlyMinuteSelect"
              >
                <option
                  value="0"
                >
                  00
                </option>
                <option
                  value="1"
                >
                  01
                </option>
                <option
                  value="2"
                >
                  02
                </option>
                <option
                  value="3"
                >
                  03
                </option>
                <option
                  value="4"
                >
                  04
                </option>
                <option
                  value="5"
                >
                  05
                </option>
                <option
                  value="6"
                >
                  06
                </option>
                <option
                  value="7"
                >
                  07
                </option>
                <option
                  value="8"
                >
                  08
                </option>
                <option
                  value="9"
                >
                  09
                </option>
                <option
                  value="10"
                >
                  10
                </option>
                <option
                  value="11"
                >
                  11
                </option>
                <option
                  value="12"
                >
                  12
                </option>
                <option
                  value="13"
                >
                  13
                </option>
                <option
                  value="14"
                >
                  14
                </option>
                <option
                  value="15"
                >
                  15
                </option>
                <option
                  value="16"
                >
                  16
                </option>
                <option
                  value="17"
                >
                  17
                </option>
                <option
                  value="18"
                >
                  18
                </option>
                <option
                  value="19"
                >
                  19
                </option>
                <option
                  value="20"
                >
                  20
                </option>
                <option
                  value="21"
                >
                  21
                </option>
                <option
                  value="22"
                >
                  22
                </option>
                <option
                  value="23"
                >
                  23
                </option>
                <option
                  value="24"
                >
                  24
                </option>
                <option
                  value="25"
                >
                  25
                </option>
                <option
                  value="26"
                >
                  26
                </option>
                <option
                  value="27"
                >
                  27
                </option>
                <option
                  value="28"
                >
                  28
                </option>
                <option
                  value="29"
                >
                  29
                </option>
                <option
                  value="30"
                >
                  30
                </option>
                <option
                  value="31"
                >
                  31
                </option>
                <option
                  value="32"
                >
                  32
                </option>
                <option
                  value="33"
                >
                  33
                </option>
                <option
                  value="34"
                >
                  34
                </option>
                <option
                  value="35"
                >
                  35
                </option>
                <option
                  value="36"
                >
                  36
                </option>
                <option
                  value="37"
                >
                  37
                </option>
                <option
                  value="38"
                >
                  38
                </option>
                <option
                  value="39"
                >
                  39
                </option>
                <option
                  value="40"
                >
                  40
                </option>
                <option
                  value="41"
                >
                  41
                </option>
                <option
                  value="42"
                >
                  42
                </option>
                <option
                  value="43"
                >
                  43
                </option>
                <option
                  value="44"
                >
                  44
                </option>
                <option
                  value="45"
                >
                  45
                </option>
                <option
                  value="46"
                >
                  46
                </option>
                <option
                  value="47"
                >
                  47
                </option>
                <option
                  value="48"
                >
                  48
                </option>
                <option
                  value="49"
                >
                  49
                </option>
                <option
                  value="50"
                >
                  50
                </option>
                <option
                  value="51"
                >
                  51
                </option>
                <option
                  value="52"
                >
                  52
                </option>
                <option
                  value="53"
                >
                  53
                </option>
                <option
                  value="54"
                >
                  54
                </option>
                <option
                  value="55"
                >
                  55
                </option>
                <option
                  value="56"
                >
                  56
                </option>
                <option
                  value="57"
                >
                  57
                </option>
                <option
                  value="58"
                >
                  58
                </option>
                <option
                  value="59"
                >
                  59
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                >
                  <span
                    aria-hidden="true"
                    class="euiFormControlLayoutCustomIcon__icon"
                    data-euiicon-type="arrowDown"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
